# swagger-output.json
@@ -27,7 +27,7 @@
         }
       }
     },
-    "/api/ABDM/Session/create": {
+    "/qa/api/ABDM/Session/create": {
       "post": {
         "tags": [
           "Session-Api"
@@ -43,7 +43,7 @@
         }
       }
     },
-    "/api/ABDM/EnrolmentViaAadhar/sendOTP": {
+    "/qa/api/ABDM/EnrolmentViaAadhar/sendOTP": {
       "post": {
         "tags": [
           "HealthID-Aadhar-Enrolment"
@@ -57,6 +57,51 @@
               "type": "object",
               "properties": {
                 "aadhar": {
+                  "example": "any"
+                },
+                "token": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/qa/api/ABDM/EnrolmentViaAadhar/verifyOTP": {
+      "post": {
+        "tags": [
+          "HealthID-Aadhar-Enrolment"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "txnId": {
+                  "example": "any"
+                },
+                "otp": {
+                  "example": "any"
+                },
+                "mobile": {
                   "example": "any"
                 },
                 "token": {
